# FastAPI-MongoDB

hanlhn/: pyproject.toml
hanlhn/app/: classes_id  config.py
hanlhn/app/config/: __init__.py
hanlhn/app/models/: model.py
hanlhn/app/prediction/: __init__.py  predict.py
hanlhn/app/routes/: flower.py
hanlhn/app/schemas/: flower.py
hanlhn/prediction/: predict.py
hanlhn/routes/: flower.py
hanlhn/schemas/: flower.py
